; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_global.c_test_config_global__open_symlinked_global.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_global.c_test_config_global__open_symlinked_global.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"home/.gitconfig.linked\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"[global]\0A  test = 4567\0A\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c".gitconfig.linked\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"home/.gitconfig\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"global.test\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_global__open_symlinked_global() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0))
  %4 = call i32 @symlink(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0))
  %5 = call i32 @cl_must_pass(i32 %4)
  %6 = call i32 @git_config_open_default(i32** %1)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32*, i32** %1, align 8
  %9 = call i32 @git_config_get_int32(i32* %2, i32* %8, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0))
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @cl_assert_equal_i(i32 4567, i32 %11)
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @git_config_free(i32* %13)
  ret void
}

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @symlink(i8*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_open_default(i32**) #1

declare dso_local i32 @git_config_get_int32(i32*, i32*, i8*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_config_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
